--- a/Matveeva_2_production.ipynb
+++ b/Matveeva_2_production.ipynb
@@ -42,7 +42,8 @@
         "Xrt8sN4lfCSe",
         "ZroW8JArfCSf"
       ],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
@@ -8458,6 +8459,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/IollyM/NN/blob/main/Matveeva_2_production.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
